# token9

./: .gitignore  Cargo.toml  Makefile  config.example.toml  config.test.toml
.github/workflows/: release.yml
clients/macos/: Package.swift
clients/macos/Sources/Token9/: DesignSystem.swift  Token9App.swift
clients/macos/Sources/Token9/Api/: Token9Client.swift
clients/macos/Sources/Token9/Models/: Identifiable+Contracts.swift
clients/macos/Sources/Token9/ViewModel/: DashboardViewModel.swift
clients/macos/Sources/Token9/Views/: GroupCardView.swift  StatsView.swift
crates/token9-contracts/src/: lib.rs
crates/token9-server/src/: admin.rs  cli.rs  config.rs  hosts.rs  main.rs  pricing.rs  proxy.rs  ratelimit.rs  routetable.rs  stats.rs  tool.rs
crates/token9-server/src/metering/: mod.rs  openai.rs
crates/token9-server/src/store/: config_store.rs  mod.rs  sqlite.rs
docs/design/token9-dashboard-v2/: README.md
scripts/: build-app.sh  build-macos.sh  gen-contracts.sh  gen-types.sh
src/: admin.rs  cli.rs  config.rs  error.rs  main.rs  proxy.rs  router.rs  stats.rs
src/metering/: anthropic.rs
src/store/: mod.rs  sqlite.rs
token9-apps/macos/Sources/Token9/: Format.swift  L10n.swift  RangeKey.swift
token9-apps/macos/Sources/Token9/ViewModel/: DashboardViewModel.swift
token9-contracts/: Cargo.toml
token9-server/: Cargo.toml
token9-server/src/: admin.rs  cli.rs  main.rs  proxy.rs  ratelimit.rs  routetable.rs  select.rs
token9-server/src/metering/: mod.rs
token9-server/src/store/: config_store.rs
(+3 files in other folders)
